# embree-wasm

./: .gitignore  CMakeLists.txt  License.txt  README.md  TUTORIALS.md  build-using-docker.sh  build-using-local-debug-fullrebuild.sh  build-using-local-debug.sh  build-using-local.sh  build.sh  embree_idl.h  embree_types.h  gen_header_files.sh  gen_idl_file.sh  make_embree.sh  rebuild_glue.sh
_h/: classes.h  extra.h  function_ptrs.h
_ts/: embree.extras.d.ts  glue.extras.js
idl/: _buffer.idl  _builder_bvh.idl  _common.idl  _device.idl  _extra.idl  _geometry.idl  _quaternion.idl  _ray.idl  _scene.idl  _scene_intersect.idl  _scene_occlude.idl  _scene_query.idl  enum_buffer_type.idl  enum_builder.idl  enum_common_buildquality.idl  enum_common_feature_flags.idl  enum_common_format.idl  enum_common_ray_query_flags.idl  enum_device_error.idl  enum_device_property.idl  enum_geo_curve_flag.idl  enum_geo_subdivision_mode.idl  enum_geometry.idl  enum_scene.idl  struct_accel.idl  struct_builder.idl  struct_bvh.idl  struct_common_bound.idl  struct_common_context.idl  struct_common_filter_function.idl  struct_common_point_query.idl  struct_geo_interpolate_args.idl  struct_geometry.idl  struct_quaternion.idl  struct_ray_hit.idl  struct_ray_ray.idl  struct_ray_rayhit.idl  struct_scene.idl  types.idl
scripts/: gen_header_files.sh  gen_idl_file.sh  parse_embree_header.mjs
vite/: index.html  package-lock.json  package.json  vite.config.ts
vite/src/: look-at.ts  main.ts  mesh.ts
vite/src/em/: .gitignore
vite/src/gpu/: device.ts
vite/src/gpu/shader/: fragment.glsl  fragment.glsl.fs  fragment_alg.ts  vertex.glsl.vs
vite/src/tutorials/bvh_access/: bvh_access.ts
vite/src/tutorials/common/: embree.ts  perf.ts  types.ts
vite/src/tutorials/common/math/: affinespace.ts  linearspace.ts  math.ts  sampling.ts
vite/src/tutorials/common/render/: renderer.ts
vite/src/tutorials/common/tutorial/: camera.ts  geometry.ts  optics.ts  stream-rayhit.ts  tutorial.ts  worker-queue.ts  worker.ts
vite/src/tutorials/curve_geometry/: curve_geometry_device.ts  curve_geometry_stream.ts  data.ts
vite/src/tutorials/forest/: forest_device.ts  forest_stream.ts  forest_z_only.ts  trees.ts
vite/src/tutorials/gpu/: bvh.ts  gpu_device.ts  tutorial_data.ts
vite/src/tutorials/grid_geometry/: data.ts  grid_geometry_device.ts  grid_geometry_stream.ts
vite/src/tutorials/triangle_geometry/: triangle_geometry_device.ts  triangle_geometry_stream.ts  triangle_geometry_z_only.ts
vite/tutorials/: bvh_access.html  curve_geometry.html  forest.html  gpu.html  grid_geometry.html  triangle_geometry.html
